--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "food-delivery-app",
   "version": "0.1.0",
+  "homepage": "https://rakeshjanapareddy.github.io/Infinite-Locus",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
